--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,16 +7,12 @@ WORKDIR /azmi_oualid_site
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /azmi_oualid_site/node_modules/.bin:$PATH
 
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install 
-RUN npm install react-scripts@3.4.1 -g
-
-# add app
 COPY . ./
 
-EXPOSE 5173
+RUN npm install 
 
-# start app
+RUN npm run build
+
+EXPOSE 6006
+
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
