--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build docker images
-        run: docker build -t main -f $COMPOSE_FILE
+        run: docker build -t main -f $COMPOSE_FILE .
 
       - name: Run tests
         run: docker run main
