--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/icons": "^1.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
