--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "my_assignment",
+  "name": "lecture",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build:main": "vite build",
-
+    "dev": "vite --host",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build:main": "BUILD_TYPE='main' vite build",
+    "build:storybook": "BUILD_TYPE='storybook' storybook build",
+    "build": "concurrently -gs all -c 'bold.cyan,bold.magenta,bold.yellow,bold.green,bold.blue' npm:build:main npm:build:storybook",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
     "test:ts": "tsc",
     "test:jest": "jest",
     "test:storybook": "test-storybook",
-    "test": "npm run test:jest && npm run test:storybook",
-    "ci:test": "npm run storybook & sleep 30 && npm run test"
+    "test": "concurrently -gs all -c 'bold.cyan,bold.magenta,bold.yellow,bold.green,bold.blue' 'npm:test:*(!ts)'",
+    "ci:test": "npm run storybook & sleep 30 && npm run test",
+    "cd": "BUILD_COMBINED='true' concurrently -gs all -c 'bold.cyan,bold.magenta,bold.yellow,bold.green,bold.blue' npm:build:main 'npm:build:storybook -- -o dist/storybook'"
   },
   "jest": {
     "transform": {
@@ -30,10 +31,8 @@
     ]
   },
   "dependencies": {
-    "@storybook/icons": "^1.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
@@ -41,35 +40,36 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@playwright/test": "^1.42.1",
-    "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^8.0.4",
-    "@storybook/addon-jest": "^8.0.4",
-    "@storybook/addon-links": "^8.0.4",
-    "@storybook/addon-onboarding": "^8.0.4",
-    "@storybook/blocks": "^8.0.4",
-    "@storybook/react": "^8.0.4",
-    "@storybook/react-vite": "^8.0.4",
-    "@storybook/test": "^8.0.4",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-jest": "^8.0.0",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.14",
+    "@storybook/icons": "^1.2.9",
+    "@storybook/react": "^7.6.14",
+    "@storybook/react-vite": "^7.6.14",
+    "@storybook/test": "^7.6.14",
     "@storybook/test-runner": "^0.17.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.7.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "storybook": "^8.0.4",
+    "storybook": "^7.6.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
